Closed Bug 779283 Opened 12 years ago Closed 12 years ago

Camera - ###!!! ASSERTION: Invalid image dimensions!: 'data.mCbCrStride & 0x7 == 0', file /Volumes/b2g/B2G/gecko/dom/camera/GonkCameraPreview.cpp, line 143

Categories

(Firefox OS Graveyard :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dzbarsky, Assigned: mikeh)

References

Details

Attachments

(1 file, 1 obsolete file)

I hit this assertion when opening the camera preview on Nexus S.  Let me know if you can't reproduce and I can try to get stack traces for you.
Attached patch Fix observed assertions (obsolete) — Splinter Review
Attachment #647755 - Flags: review?(dzbarsky)
Summary: ###!!! ASSERTION: Invalid image dimensions!: 'data.mCbCrStride & 0x7 == 0', file /Volumes/b2g/B2G/gecko/dom/camera/GonkCameraPreview.cpp, line 143 → Camera - ###!!! ASSERTION: Invalid image dimensions!: 'data.mCbCrStride & 0x7 == 0', file /Volumes/b2g/B2G/gecko/dom/camera/GonkCameraPreview.cpp, line 143
Comment on attachment 647755 [details] [diff] [review]
Fix observed assertions

r=me
Attachment #647755 - Flags: review?(dzbarsky) → review+
blocking-basecamp: --- → ?
Now with 100% more headers.
Attachment #647755 - Attachment is obsolete: true
I already landed the patch, I was just telling you for future reference ;)
https://hg.mozilla.org/mozilla-central/rev/9263673d378c
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
blocking-basecamp: ? → ---
Was this fix important enough that we'd block if it regressed?  Please re-basecamp? if so.  Thanks.
(In reply to Andrew Overholt [:overholt] from comment #8)
> Was this fix important enough that we'd block if it regressed?  Please
> re-basecamp? if so.  Thanks.

Functionally, no change.  But it clutters the logcat output with incorrect assertions.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: