Bug 779283: fix assertions in ICS camera r=dzbarsky